[package]
name = "stage-random-form-config"
version = "0.1.0"
authors = []
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = "0.2.0"
once_cell = "1.12.0"
rand = { git = "https://github.com/skyline-rs/rand" }
toml = "0.7.6"
serde = { version = "1.0", features = ["derive"] }
arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api" }

[patch.crates-io]
getrandom = { git = "https://github.com/skyline-rs/getrandom" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
